--- a/source/zh-cn/index.jade
+++ b/source/zh-cn/index.jade
@@ -8,23 +8,23 @@ ul#intro-feature-list
     .intro-feature
       .intro-feature-icon
         i.fa.fa-bolt
-      h3.intro-feature-title 超快速度
-      p.intro-feature-desc Node.js 所带来的超快生成速度，让上百个页面在几秒内瞬间完成渲染。
+      h3.intro-feature-title Web
+      p.intro-feature-desc 交互规范、组件库、前端代码规范、HTML规范、CSS规范、JavaScript规范、命名规范、图片规范
   li.intro-feature-wrap
     .intro-feature
       .intro-feature-icon
         i.fa.fa-pencil
-      h3.intro-feature-title 支持 Markdown
-      p.intro-feature-desc Hexo 支持 GitHub Flavored Markdown 的所有功能，甚至可以整合 Octopress 的大多数插件。
+      h3.intro-feature-title iOS
+      p.intro-feature-desc 交互规范、组件库、框架、工具、代码审查、开源项目
   li.intro-feature-wrap
     .intro-feature
       .intro-feature-icon
         i.fa.fa-cloud-upload
-      h3.intro-feature-title 一键部署
-      p.intro-feature-desc 只需一条指令即可部署到 GitHub Pages, Heroku 或其他网站。
+      h3.intro-feature-title Android
+      p.intro-feature-desc 交互规范、组件库、框架、工具、代码审查、开源项目
   li.intro-feature-wrap
     .intro-feature
       .intro-feature-icon
         i.fa.fa-cog
-      h3.intro-feature-title 丰富的插件
-      p.intro-feature-desc Hexo 拥有强大的插件系统，安装插件可以让 Hexo 支持 Jade, CoffeeScript。
+      h3.intro-feature-title Server
+      p.intro-feature-desc Nginx配置
